[tool.poetry]
name = "probe-22-10"
version = "0.1.0"
description = ""
authors = ["artemsermiagin <artem_sermyagin@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.lint.dependencies]
flake8 = "^6.1.0"
mypy = "^1.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
